--- a/css/style.css
+++ b/css/style.css
@@ -11,15 +11,25 @@ body {
     font-size: 16px;
 }
 
+#cabecera {
+    background-color: rgb(37, 4, 90);
+    color: azure;
+    font-weight: bold;
+    margin: 0;
+    padding: 0.5rem;
+}
+
+
 #container {
 
     width: 70%;
-    padding: 1em;
+    padding: ;
     text-align: left;
     border: 1px solid ;
     margin: 0 auto;
 }
 
-#container h1 {
+#container h1, p {
     font-size: 20px;
+    padding: 1.4em;
 }
