--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 
 body {
     text-align: center;
-    font-family: cursive;
+    font-family:Georgia, 'Times New Roman', Times, serif;
     color: rgb(17, 17, 17);
     font-size: 16px;
 }
